assets/css/screen.css
/* ... */
.post-full-content {
    font-size: 2rem;
}

.post-full-content h1,
.post-full-content h2,
.post-full-content h3 {
    font-family: var(--fontSerif);
}

@media (max-width: 1170px) {
    .post-full-content,
    .post-full-footer {
        padding: 5vw 7vw 0;
    }
}
@media (max-width: 800px) {
    .post-full-content {
        font-size: 1.4rem;
    }
}

.post-full-content:before {
    content: "";
    position: absolute;
    top: 15px;
    left: -5px;
    z-index: -1;
    display: block;
    width: 20px;
    height: 200px;
    background: rgba(39,44,49,0.15);
    filter: blur(5px);
    transform: rotate(-5deg);
}

.post-full-content:after {
    content: "";
    position: absolute;
    top: 15px;
    right: -5px;
    z-index: -1;
    display: block;
    width: 20px;
    height: 200px;
    background: rgba(39,44,49,0.15);
    filter: blur(5px);
    transform: rotate(5deg);
}

.no-image .post-full-content {
    padding-top: 0;
}

.no-image .post-full-content:before,
.no-image .post-full-content:after {
    display: none;
}

/*.kg-card-markdown {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 920px;
}*/

/*.post-full-content p,
.post-full-content ul,
.post-full-content ol,
.post-full-content dl,
.post-full-content pre,
.post-full-content h1,
.post-full-content h2,
.post-full-content h3,
.post-full-content h4,
.post-full-content h5,
.post-full-content h6,
.post-full-comments,
.footnotes {
    min-width: 100%;
}*/

.post-full-content p {
    color: var(--colorTextCopy);
}

.post-full-content figcaption {
    text-align: center;
    font-family: var(--fontSerif);
    font-style: italic;
    line-height: 1.5em;
    padding-left: 1em;
    padding-right: 1em;
}

/* ALIGNMENT */
.post-full-content figure.to-left,
.post-full-content figure.to-right {
    float: left;
    width: 50%;
    margin: 0 1em 0 0;
}


.post-full-content figure.to-right {
    float: right;
    margin: 0 0 0 1em;
}

.post-full-content figure.to-left img,
.post-full-content figure.to-right img {
    width: 100%;
    margin-top: 0;
    margin-bottom: 0;
}

.post-full-content figure.to-full {
    position: relative;
    width: 100vw;
    margin-left: 50%;
    transform: translateX(-50%);
}

.post-full-content figure.to-full img {
    width: 100%;
    max-width: none;
}


@media (min-width: 768px) {
    .post-full-content figure.to-full figcaption {
        position: absolute;
        bottom: 0;
        left: 0;
        right: 0;
        background: rgba(0,0,0,0.9);
        padding: 1em;
        color: var(--colorTextLight);
    }
}

@media (min-width: 1040px) {
    .post-full-content figure.to-full figcaption.to-left {
        top: 25%;
        bottom: auto;
        max-width: 300px;
        left: 10%;
        right: auto;
        text-align: left;
        background: rgba(255,255,255, 0.95);
        padding: 1.5em;
        color: var(--colorTextDark);
    }

    .post-full-content figure.to-full figcaption.to-right {
        top: 25%;
        bottom: auto;
        max-width: 300px;
        left: auto;
        right: 10%;
        text-align: left;
        background: rgba(255,255,255, 0.95);
        padding: 1.5em;
        color: var(--colorTextDark);
    }
}

.post-template .kg-card-markdown > p:first-child {
    font-size: 1em;
}

.post-full-content a {
    color: #000;
    box-shadow: var(--colorBrandHot) 0 -1px 0 inset;
}

.post-full-content a:hover {
    color: var(--colorBrandHot);
    text-decoration: none;
}

.post-full-content strong,
.post-full-content em {
    color: var(--colorDark);
}

.post-full-content small {
    display: inline-block;
    line-height: 1.6em;
}

.post-full-content li:first-child {
    margin-top: 0;
}

.post-full-content img,
.post-full-content video {
    display: block;
    max-width: 1040px;
    margin: 1.5em auto 0.5em;
    margin-left: 50%;
    transform: translateX(-50%);
}
@media (max-width: 1040px) {
    .post-full-content img,
    .post-full-content video {
        width: 100%;
    }
}


/* Full bleed images (#full)
Super neat trick courtesy of @JoelDrapper

Usage (In Ghost edtior):

![img](/some/image.jpg#full)

*/
.post-full-content img[src$="#full"] {
    width: 100vw;
    max-width: none;
}

/* Image captions

Usage (In Ghost editor):

![img](/some/image.jpg)
<small>Your image caption</small>

*/
.post-full-content br + small {
    display: block;
    margin-top: -3em;
    margin-bottom: 1.5em;
}


.post-full-content iframe {
    margin: 0 auto 1.5em;
}

.post-full-content blockquote {
    margin: 0 0 1.5em 0;
    padding: 0;
    border: 0;
    color: var(--colorTextDark);
    font-family: var(--fontSerif);
    font-style: italic;
    max-width: 100%;
}

.post-full-content blockquote,
.post-full-content blockquote p {
    color: var(--colorTextDark);
}

.post-full-content blockquote p {
    border-left: solid 2px var(--colorTextDark);
    padding-left: 1em;
}

.post-full-content blockquote cite {
    font-family: var(--fontSans);
    font-size: 1.2rem;
}

.post-full-content blockquote:before {
    content: open-quote;
}

.post-full-content blockquote p {
    margin: 0;
}

.post-full-content blockquote .fancy {
    display: block;
    font-size: 3rem;
    line-height: 1.6em;
    padding: 1.5em 0;
    text-align: center;
    margin-left: 50%;
    transform: translateX(-50%);
    border-left: none;
    width: 100%;
}

.post-full-content blockquote cite {
    display: block;
    font-style: normal;
}

@media (min-width: 1000px) {
    .post-full-content blockquote .fancy {
        width: 80vw;
    }
}

.post-full-content blockquote + blockquote {
    padding-top: 0;
}

.post-full-content code {
    padding: 0 5px 2px;
    font-size: 0.8em;
    line-height: 1em;
    font-weight: 400!important;
    background: var(--whitegrey);
    border-radius: 3px;
}
/* ... */

